--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -8,6 +8,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -15,14 +19,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/QMUITheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:replace="android:allowBackup"
+        tools:ignore="GoogleAppIndexingWarning"
+        >
         <meta-data
             android:name="design_width_in_dp"
             android:value="540"/>
         <meta-data
             android:name="design_height_in_dp"
             android:value="1080"/>
-        <activity android:name=".FindEquipmentActivity">
+        <activity android:name=".ui.Main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
