--- a/chongWuKongJing/app/build.gradle
+++ b/chongWuKongJing/app/build.gradle
@@ -69,4 +69,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    implementation 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'//循环进度按钮
+    implementation 'com.romainpiel.shimmer:library:1.4.0@aar'//闪亮字体
+    implementation 'com.github.AppIntro:AppIntro:5.1.0'//快速欢迎页
 }
