--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -22,20 +22,27 @@
         android:name = ".ui.Main.MyApplication"
         tools:replace="android:name"
         tools:ignore="GoogleAppIndexingWarning"
+        android:networkSecurityConfig="@xml/network_security_config"
         >
+
         <meta-data
             android:name="design_width_in_dp"
             android:value="540"/>
         <meta-data
             android:name="design_height_in_dp"
             android:value="1080"/>
-        <activity android:name=".ui.fragment.machune.MachineSetActivity">
+
+        <activity android:name=".ui.Activity.InterfaceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.Activity.WelcomeActivity"
+            android:theme="@style/AnimActivity" />
+        <activity android:name=".ui.Activity.RegisterActivity" />
     </application>
 
 </manifest>
