--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".ui.Activity.RegisterActivity" />
         <activity android:name=".ui.Activity.LoginActivity"></activity>
         <activity android:name=".ui.Activity.AddMachineActivity"></activity>
+        <activity android:name=".ui.Activity.FindEquipmentActivity"></activity>
+        <activity android:name=".ui.Activity.InputPasswordActivity"></activity>
     </application>
 
 </manifest>
