准备开始机器设置调节

--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -47,6 +47,8 @@
         <activity android:name=".ui.Activity.AddMachineActivity"></activity>
         <activity android:name=".ui.Activity.FindEquipmentActivity"></activity>
         <activity android:name=".ui.Activity.InputPasswordActivity"></activity>
+        <activity android:name=".ui.Activity.MyEquipmentAcitivity"></activity>
+        <activity android:name=".ui.fragment.machune.MachineSetActivity"></activity>
     </application>
 
 </manifest>
