--- a/chongWuKongJing/app/build.gradle
+++ b/chongWuKongJing/app/build.gradle
@@ -32,7 +32,7 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.sim.chongwukongjing"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -70,6 +70,11 @@ dependencies {
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
     implementation 'com.android.support:multidex:1.0.3'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'//闪亮字体
     implementation 'com.github.AppIntro:AppIntro:5.1.0'//快速欢迎页
+    //compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+    implementation 'com.github.baoyachi:StepView:1.9'
+    //implementation 'com.github.Bakumon:StatusLayoutManager:1.0.4'
+    implementation 'com.xw.repo:bubbleseekbar:3.20-lite'
 }
