--- a/chongWuKongJing/build.gradle
+++ b/chongWuKongJing/build.gradle
@@ -2,9 +2,9 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -16,6 +16,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
