ｓｓｌ连接失败　心跳测试

--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -12,6 +12,14 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+
+
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -45,13 +53,14 @@
         <activity android:name=".ui.Activity.InputPasswordActivity"></activity>
         <activity android:name=".ui.Activity.MyEquipmentAcitivity"></activity>
         <activity android:name=".ui.fragment.machune.MachineSetActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <service android:name="org.eclipse.paho.android.service.MqttService" />
     </application>
 
 </manifest>
