--- a/chongWuKongJing/build.gradle
+++ b/chongWuKongJing/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+
         mavenCentral()
         google()
         jcenter()
@@ -20,6 +22,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+
     }
 }
 
