--- a/chongWuKongJing/app/build.gradle
+++ b/chongWuKongJing/app/build.gradle
@@ -69,12 +69,14 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
     implementation 'com.android.support:multidex:1.0.3'
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.3'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'//闪亮字体
     implementation 'com.github.AppIntro:AppIntro:5.1.0'//快速欢迎页
+    implementation group: 'com.blankj', name: 'utilcodex', version: '1.23.7'
+    implementation 'com.github.ZS-ZhangsShun:EasyMqttAndroidClient:1.0'
     //compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-    implementation 'com.github.baoyachi:StepView:1.9'
+
     //implementation 'com.github.Bakumon:StatusLayoutManager:1.0.4'
-    implementation 'com.xw.repo:bubbleseekbar:3.20-lite'
+
 }
