--- a/chongWuKongJing/app/build.gradle
+++ b/chongWuKongJing/app/build.gradle
@@ -76,9 +76,10 @@ dependencies {
     implementation group: 'com.blankj', name: 'utilcodex', version: '1.23.7'
     implementation 'com.github.ZS-ZhangsShun:EasyMqttAndroidClient:1.0'
 
-
+    implementation 'com.github.anzaizai:EasySwipeMenuLayout:1.1.4'
     //compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
     //implementation 'com.github.Bakumon:StatusLayoutManager:1.0.4'
 
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
 }
