机器调试接口与ｍｑｔｔ连接成功

--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
 
 
         </activity>
-        <service android:name="org.eclipse.paho.android.service.MqttService" />
+        <service android:name="org.eclipse.paho.android.service.MqttService" /> <!--MqttService-->
+        <service android:name="com.sim.chongwukongjing.ui.http.MyMqttService"/> <!--MyMqttService-->
     </application>
 
 </manifest>
