--- a/chongWuKongJing/app/build.gradle
+++ b/chongWuKongJing/app/build.gradle
@@ -75,8 +75,9 @@ dependencies {
     implementation 'com.github.AppIntro:AppIntro:5.1.0'//快速欢迎页
     implementation group: 'com.blankj', name: 'utilcodex', version: '1.23.7'
     implementation 'com.github.ZS-ZhangsShun:EasyMqttAndroidClient:1.0'
-
+    implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.github.anzaizai:EasySwipeMenuLayout:1.1.4'
+    implementation 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
     //compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
 
     //implementation 'com.github.Bakumon:StatusLayoutManager:1.0.4'
