--- a/chongWuKongJing/app/build.gradle
+++ b/chongWuKongJing/app/build.gradle
@@ -79,7 +79,7 @@ dependencies {
     implementation 'com.github.anzaizai:EasySwipeMenuLayout:1.1.4'
     implementation 'com.github.zzz40500:android-shapeLoadingView:1.0.3.2'
     //compile 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-
+    implementation 'com.bigkoo:svprogresshud:1.0.6'
     //implementation 'com.github.Bakumon:StatusLayoutManager:1.0.4'
 
 
