--- a/chongWuKongJing/app/src/main/AndroidManifest.xml
+++ b/chongWuKongJing/app/src/main/AndroidManifest.xml
@@ -22,9 +22,9 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/tubiao"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/tubiao"
         android:supportsRtl="true"
         android:theme="@style/QMUITheme"
         android:name = ".ui.Main.MyApplication"
